[package]
name = "hvctrl"
version = "0.1.0"
authors = ["takubokudori <takubokudori@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/takubokudori/hvctrl"
homepage = "https://github.com/takubokudori/hvctrl"
keywords = ["hypervisor", "vmware", "virtualbox", "hyper-v"]
description = "A hypervisor controller library"
readme = "README.md"
edition = "2018"

exclude = [
    ".gitignore",
    "/examples/**",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
regex = "1.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windy = "0.1.4"

[dev-dependencies]
toml = "0.5"

[features]
hyperv = []
virtualbox = []
vmware = []

hypervcmd = []
vboxmanage = []
vmrest = []
