[package]
name = "hvctrl"
version = "0.1.0"
authors = ["takubokudori <takubokudori@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/takubokudori/hvctrl"
homepage = "https://github.com/takubokudori/hvctrl"
keywords = ["hypervisor", "vmware", "virtualbox", "hyper-v"]
description = "A hypervisor controller library"
readme = "README.md"
edition = "2018"

exclude = [
    ".gitignore",
    "/examples/**",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
encoding_rs = "0.8.28"
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windy = { version = "0.2.0" }

[dev-dependencies]
toml = "0.5"

[features]
hyperv = ["hypervcmd"]
virtualbox = ["vboxmanage"]
vmware = ["vmrest", "vmrun"]

hypervcmd = []
vboxmanage = []
vmrest = ["reqwest"]
vmrun = []
