[package]
name = "vmcopy"
version = "0.1.0"
authors = ["takubokudori <takubokudori@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/takubokudori/vmcopy"
homepage = "https://github.com/takubokudori/vmcopy"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
hvctrl = { path = "../../", features = ["hypervcmd", "vboxmanage", "vmrun"] }
rpassword = "5.0.1"
